--- a/rikser/src/index.css
+++ b/rikser/src/index.css
@@ -1,7 +1,42 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
+  Arial, sans-serif;
+  display: grid;
+  place-items: center;
+  justify-content: center;
+  height: auto;
+
+  padding: 0%;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+  background-color: aquamarine;
+}
+
+.container {
+  display: grid;
+  place-items: center;
+  justify-content: center;
+  margin-top: 320px;
+}
+
+#searchfield {
+  width: 500px;
+  height: 25px;
+  border-radius: 8px;
+  box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.35);
+
+}
+
+#searchfield:hover {
+  box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.35) ;
+}
+
+.buttons {
+background-color: aquamarine;
+display: flex;
+height: 100px;
+flex-direction: row;
+align-items: flex-start;
+row-gap: 20px;
 }
